; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_thumbnailer_buffer_new.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_thumbnailer_buffer_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }
%struct.decoder_owner = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_6__*)* @thumbnailer_buffer_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @thumbnailer_buffer_new(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca %struct.decoder_owner*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %6 = call %struct.decoder_owner* @dec_get_owner(%struct.TYPE_6__* %5)
  store %struct.decoder_owner* %6, %struct.decoder_owner** %4, align 8
  %7 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %8 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %7, i32 0, i32 0
  %9 = call i32 @vlc_mutex_lock(i32* %8)
  %10 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %11 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %1
  %15 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %16 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %15, i32 0, i32 0
  %17 = call i32 @vlc_mutex_unlock(i32* %16)
  store i32* null, i32** %2, align 8
  br label %26

18:                                               ; preds = %1
  %19 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %20 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %19, i32 0, i32 0
  %21 = call i32 @vlc_mutex_unlock(i32* %20)
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = call i32* @picture_NewFromFormat(i32* %24)
  store i32* %25, i32** %2, align 8
  br label %26

26:                                               ; preds = %18, %14
  %27 = load i32*, i32** %2, align 8
  ret i32* %27
}

declare dso_local %struct.decoder_owner* @dec_get_owner(%struct.TYPE_6__*) #1

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1

declare dso_local i32* @picture_NewFromFormat(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
